# DiscordBot-

./: 1Urgent Features(do NOW).txt  Finished Features.txt  Functions.py  YTDL.txt  createtable.py  featurestoadd.txt  main.py  play_command v1.txt  pyproject.toml  sqlite_Functions.py
