[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
youtube-dl = "^2021.2.10"
PyNaCl = "^1.4.0"
ffmpeg = "^1.4"
dash-core-components = "^1.15.0"
yt-search = "^1.1.0"
pafy = "^0.5.5"
spotipy2 = "^0.4"
spotipy = "^2.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
